# WEndex.Taxi

./: README.md
taxi-master/taxi/: Address.h  CMakeLists.txt  DefaultPassengerGateway.cpp  DriverGateway.cpp  DriverGateway.h  Map  Models.h  Order.cpp  Order.h  PassengerGateway.cpp  PassengerGateway.h  Repository.cpp  Repository.h  Transform.cpp  Transform.h  WendexTaxi.h  main.cpp
taxi-master/taxi/UserAppData/: Car.cpp  Car.h  CarType.h  Driver.cpp  Driver.h  Passenger.cpp  Passenger.h  paymentMethods.h
